--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx src/index.ts",
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "build": "tsc -p tsconfig.json"
   },
   "keywords": [
     "mcp",
@@ -25,7 +26,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "tsx": "^4.6.0"
+    "tsx": "^4.6.0",
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18.0.0"
